mds: propagate error encountered during opening inode by number

Fixes: http://tracker.ceph.com/issues/18179
Signed-off-by: Yan, Zheng <zyan@redhat.com>
(cherry picked from commit 2213cc2dcc0e8fb01bcae3863d0d8a4a1fd8873f)